--- a/config/MasWebsite/templates/MasWebsite/base2.html
+++ b/config/MasWebsite/templates/MasWebsite/base2.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'style2.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'MasWebsite/style2.css' %}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Custom Crafted Creations</title>
   </head>
   <body>
     <div class="logo-top">
-      <h1>GCFlores Creations</h1>
+      <h1>Flores Creations</h1>
     </div>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
       <div class="collapse navbar-collapse">
