added shoppe page and fixed img in about us

--- a/config/MasWebsite/templates/MasWebsite/shoppe.html
+++ b/config/MasWebsite/templates/MasWebsite/shoppe.html
@@ -2,9 +2,121 @@
 
 {% block content %}
 <div class="container-ac">
-  <div class="container-contact rounded m-auto shadow-lg">
-    <h1>Shoppe</h1>
-
+  <div class="container-shoppe">
+    <div class="container-shoppe-left">
+      <div class="menu rounded shadow">
+        <h4>Size</h4>
+        <p></p>
+        <p>Small</p>
+        <p>Medium</p>
+        <p>Large</p>
+      </div>
+      <div class="menu2 rounded shadow">
+        <h4>Style</h4>
+        <p></p>
+        <p>Print</p>
+        <p>Color</p>
+        <p>Surprise</p>
+      </div>
+    </div>
+    <div class="container-shoppe-right mr-auto rounded shadow">
+      <div class="card shadow" style="width: 18rem;">
+        <a href="/product">
+          <img src="https://flores-creations.s3.us-east-2.amazonaws.com/M1.jpeg" class="card-img-top" alt="...">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="price-point">
+          <p>$10.00</p>
+        </div>
+        <div class="card-body">
+          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+        </div>
+      </div>
+      <div class="card shadow" style="width: 18rem;">
+        <a href="/product">
+          <img src="https://flores-creations.s3.us-east-2.amazonaws.com/M2.jpeg" class="card-img-top" alt="...">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="price-point">
+          <p>$10.00</p>
+        </div>
+        <div class="card-body">
+          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+        </div>
+      </div>
+      <div class="card shadow" style="width: 18rem;">
+        <a href="/product">
+          <img src="https://flores-creations.s3.us-east-2.amazonaws.com/M3.jpeg" class="card-img-top" alt="...">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="price-point">
+          <p>$10.00</p>
+        </div>
+        <div class="card-body">
+          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+        </div>
+      </div>
+      <div class="card shadow" style="width: 18rem;">
+        <a href="/product">
+          <img src="https://flores-creations.s3.us-east-2.amazonaws.com/M4.jpeg" class="card-img-top" alt="...">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="price-point">
+          <p>$10.00</p>
+        </div>
+        <div class="card-body">
+          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+        </div>
+      </div>
+      <div class="card shadow" style="width: 18rem;">
+        <a href="/product">
+          <img src="https://flores-creations.s3.us-east-2.amazonaws.com/M5.jpeg" class="card-img-top" alt="...">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="price-point">
+          <p>$10.00</p>
+        </div>
+        <div class="card-body">
+          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+        </div>
+      </div>
+      <div class="card shadow" style="width: 18rem;">
+        <a href="/product">
+          <img src="https://flores-creations.s3.us-east-2.amazonaws.com/M6.jpeg" class="card-img-top" alt="...">
+        </a>
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        </div>
+        <div class="price-point">
+          <p>$10.00</p>
+        </div>
+        <div class="card-body">
+          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
