updated cards for products and removed row of categories

--- a/config/MasWebsite/templates/MasWebsite/contact.html
+++ b/config/MasWebsite/templates/MasWebsite/contact.html
@@ -21,9 +21,10 @@
       <div class="form-group">
         <label for="Select1">Category</label>
         <select name="category" class="form-control" id="Select1" required>
+          <option>Order</option>
+          <option>Billing</option>
           <option>Customer Service</option>
           <option>Customer Feedback</option>
-          <option>Billing</option>
           <option>Other</option>
         </select>
         <div class="valid-feedback">Perfect!</div>
