--- a/config/MasWebsite/templates/MasWebsite/shoppe.html
+++ b/config/MasWebsite/templates/MasWebsite/shoppe.html
@@ -5,18 +5,13 @@
   <div class="container-shoppe">
     <div class="container-shoppe-left">
       <div class="menu rounded shadow">
-        <h4>Size</h4>
+        <h4>Product</h4>
         <p></p>
-        <p>Small</p>
-        <p>Medium</p>
-        <p>Large</p>
-      </div>
-      <div class="menu2 rounded shadow">
-        <h4>Style</h4>
-        <p></p>
-        <p>Print</p>
-        <p>Color</p>
-        <p>Surprise</p>
+        <p>Masks</p>
+        <p>Shirts</p>
+        <p>Sweaters</p>
+        <p>Hats</p>
+        <p>Doggy Apparel</p>
       </div>
     </div>
     <div class="container-shoppe-right mr-auto rounded shadow">
@@ -28,12 +23,8 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
-        <div class="price-point">
-          <p>$10.00</p>
-        </div>
         <div class="card-body">
-          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
-          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Buy</a>
         </div>
       </div>
       <div class="card shadow" style="width: 18rem;">
@@ -44,12 +35,8 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
-        <div class="price-point">
-          <p>$10.00</p>
-        </div>
         <div class="card-body">
-          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
-          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Buy</a>
         </div>
       </div>
       <div class="card shadow" style="width: 18rem;">
@@ -60,12 +47,8 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
-        <div class="price-point">
-          <p>$10.00</p>
-        </div>
         <div class="card-body">
-          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
-          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Buy</a>
         </div>
       </div>
       <div class="card shadow" style="width: 18rem;">
@@ -76,12 +59,8 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
-        <div class="price-point">
-          <p>$10.00</p>
-        </div>
         <div class="card-body">
-          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
-          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Buy</a>
         </div>
       </div>
       <div class="card shadow" style="width: 18rem;">
@@ -92,12 +71,8 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
-        <div class="price-point">
-          <p>$10.00</p>
-        </div>
         <div class="card-body">
-          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
-          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Buy</a>
         </div>
       </div>
       <div class="card shadow" style="width: 18rem;">
@@ -108,12 +83,8 @@
           <h5 class="card-title">Card title</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         </div>
-        <div class="price-point">
-          <p>$10.00</p>
-        </div>
         <div class="card-body">
-          <a role="button" class="btn btn-sm pinky4" href="/product">Details</a>
-          <a role="button" class="btn btn-sm pinky4" href="/cart">Add To Cart</a>
+          <a role="button" class="btn btn-sm pinky4" href="/cart">Buy</a>
         </div>
       </div>
     </div>
