Updated text on multiple pages created Product model

--- a/config/MasWebsite/templates/MasWebsite/shoppe.html
+++ b/config/MasWebsite/templates/MasWebsite/shoppe.html
@@ -5,7 +5,7 @@
   <div class="container-shoppe">
     <div class="container-shoppe-left">
       <div class="menu rounded shadow">
-        <h4>Product</h4>
+        <h4 style="text-decoration: underline;">Products</h4>
         <p></p>
         <p>Masks</p>
         <p>Shirts</p>
