--- a/config/MasWebsite/templates/MasWebsite/index.html
+++ b/config/MasWebsite/templates/MasWebsite/index.html
@@ -28,8 +28,8 @@
             <img class="d-block w-100" src="{{ item.url }}" alt="{{ item.name }} Slide">
           </a>
           <div class="carousel-caption d-none d-md-block">
-            <h5>{{ item.name }}</h5>
-            <p>{{ item.short_d }}</p>
+            <h5 style="color: black;">{{ item.name }}</h5>
+            <p style="color: black;">{{ item.short_d }}</p>
           </div>
         </div>
         {% endfor %}
