--- a/config/MasWebsite/templates/MasWebsite/shoppe.html
+++ b/config/MasWebsite/templates/MasWebsite/shoppe.html
@@ -17,7 +17,7 @@
     <div class="container-shoppe-right mr-auto rounded shadow">
       {% for item in ProdList %}
       <div class="card shadow" style="width: 18rem;">
-        <a href="/shoppe">
+        <a href="/product">
           <img src="{{ item.url }}" class="card-img-top" alt="{{ item.name }}">
         </a>
         <div class="card-body">
