updated product page text

--- a/config/MasWebsite/templates/MasWebsite/product.html
+++ b/config/MasWebsite/templates/MasWebsite/product.html
@@ -18,7 +18,7 @@
       </div>
       <div class="card-body">
         <h1 class="card-title">Sorry For The Inconvenience!</h1>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <p class="card-text">Due to the nature of custom work, we ask that you reach out to us before placing an order so that we ensure that you are getting the product that you want, not the product that we think that you want. Feel free to reach out to us directly, via email, by following the link below and filling out your information. We will reach out as soon as we possibly can to confirm the details of your order.</p>
         <a href="/contact" class="btn pinky">Contact Via E-mail</a>
       </div>
       <div class="card-footer text-muted" style=" background-color: #e3f2fd">
