--- a/config/MasWebsite/templates/MasWebsite/product.html
+++ b/config/MasWebsite/templates/MasWebsite/product.html
@@ -4,21 +4,27 @@
 <div class="container-ac">
   <div class="container-product">
     <div class="container-prodview">
-      <div class="card mb-3 shadow-lg">
-        <img src="https://flores-creations.s3.us-east-2.amazonaws.com/IMG_2553.JPG" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="card mb-3" style="max-width: 80vw; margin-left: 8vw;">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="https://flores-creations.s3.us-east-2.amazonaws.com/IMG_2249.JPG" style="max-width: 45vw;" alt="...">
+          </div>
+          <div class="col-md-5" style="margin-left: 18.5vw; padding-top: 5vh;">
+            <div class="card-body">
+              <h1 class="card-title">Card title</h1>
+              <p class="card-text" style="padding-top: 5vh;">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
     <div class="card text-center shadow-lg">
       <div class="card-header" style=" background-color: #e3f2fd">
-        Hello!
+
       </div>
       <div class="card-body">
         <h1 class="card-title">Sorry For The Inconvenience!</h1>
-        <p class="card-text">Due to the nature of custom work, we ask that you reach out to us before placing an order so that we ensure that you are getting the product that you want, not the product that we think that you want. Feel free to reach out to us directly, via email, by following the link below and filling out your information. We will reach out as soon as we possibly can to confirm the details of your order.</p>
+        <p class="card-text">Due to the nature of custom work, we ask that you reach out to us before placing an order so that we ensure that you are getting the product that you actually want, not the product that we think that you want. Feel free to reach out to us directly, via email, by following the link below and filling out your information. We will reach out as soon as we possibly can to confirm the details of your order.</p>
         <a href="/contact" class="btn pinky">Contact Via E-mail</a>
       </div>
       <div class="card-footer text-muted" style=" background-color: #e3f2fd">
