added filter functionality to shoppe page

--- a/config/MasWebsite/templates/MasWebsite/index.html
+++ b/config/MasWebsite/templates/MasWebsite/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container-landing" style="background: url('https://flores-creations.s3.us-east-2.amazonaws.com/BG7.jpg') no-repeat center top fixed;" >
   <h1>Hand Crafted Masks</h1>
-  <a role="button" class="btn btn-lg btn-outline-light pinky" href="/shoppe">Shop Masks</a>
+  <a role="button" class="btn btn-lg btn-outline-light pinky" href="shoppe/all">Shop Masks</a>
 </div>
 <div class="container-wb">
   <h1>Featured Masks</h1>
