--- a/config/MasWebsite/templates/MasWebsite/base2.html
+++ b/config/MasWebsite/templates/MasWebsite/base2.html
@@ -16,7 +16,7 @@
       <div class="collapse navbar-collapse">
         <div class="navbar-nav m-auto">
           <a class="nav-item nav-link active" href="/">Home<span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link" href="/shoppe">Shoppe</span></a>
+          <a class="nav-item nav-link" href="/shoppe/all">Shoppe</span></a>
           <a class="nav-item nav-link" href="/about">About</a>
           <a class="nav-item nav-link" href="/contact">Contact</a>
         </div>
