--- a/config/MasWebsite/templates/MasWebsite/product.html
+++ b/config/MasWebsite/templates/MasWebsite/product.html
@@ -14,6 +14,16 @@
               <h1 class="card-title">{{ Product.name }}</h1>
               <p class="card-text" style="padding-top: 5vh;">{{ Product.short_d }}</p>
             </div>
+            <br>
+            <div class="card-prices">
+              <h3>Small:</h3><h4>$7.00</h4>
+
+              <h3>Medium:</h3><h4>$10.00</h4>
+
+              <h3>Large:</h3><h4>$12.00</h4>
+
+              <h3>Custom Details:</h3><h4>+$3.00</h4>
+            </div>
           </div>
         </div>
       </div>
